Fixed an overflow issue.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,6 +10,7 @@ body {
   height: 100%;
   background-color: #fff;
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 body:before {
